--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 
 # Copy requirements and install
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 # Copy rest of the app code
 COPY . .
@@ -16,3 +16,4 @@ EXPOSE 8000
 
 # Start the app (adjust module path if needed)
 CMD ["uvicorn", "services.api:app", "--host", "0.0.0.0", "--port", "8000"]
+
